fix safari alignment for size controls

--- a/style.css
+++ b/style.css
@@ -348,10 +348,11 @@ h4 {
     position: relative;
     z-index: 50;
     justify-content: space-around;
+    align-items: center;
     width: 80px;
     border-style: solid;
     border-radius: 40px;
-    height: 100%;
+    height: 48px;
     border-color: #056599;
     display: flex;
 }
@@ -391,14 +392,16 @@ h4 {
     justify-content: center;
     align-items: center;
     height: 100%;
-    border-radius: 9999px; 
+    border-radius: 9999px;
     color: #056599;
-    font-weight: 600; 
+    font-weight: 600;
     transition-property: background-color;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms; 
+    transition-duration: 150ms;
     background-color: transparent;
     border: transparent;
+    -webkit-appearance: none;
+    appearance: none;
     cursor: pointer;
 }
 
